--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -36,27 +36,28 @@ jobs:
           mkdir -p out
 
           YEAR=$(date -u +%Y)
+          START_YEAR=$((YEAR-1))
+          END_YEAR=$((YEAR+1))
 
           python prodcal_ics.py \
-            --start-year=$((YEAR-1)) \
-            --end-year=$((YEAR+1)) \
+            --start-year=$START_YEAR \
+            --end-year=$END_YEAR \
             -o out/prodcal.ics
 
-          # Copy static site files from repo
+          # Copy static site files
           cp index.html out/index.html
           cp style.css out/style.css
 
           # Build meta.json for the page
           UPDATED_AT=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
           BASE_URL="https://justSmK.github.io/prodcal-ics"
-          SUBSCRIBE_URL="${BASE_URL}/prodcal.ics"
 
           cat > out/meta.json << EOF
           {
             "updatedAtUtc": "${UPDATED_AT}",
-            "subscribeUrl": "${SUBSCRIBE_URL}",
-            "hhCalendarUrl": "https://hh.ru/calendar",
-            "hhArticleUrl": "https://hh.ru/article/calendar${YEAR}"
+            "subscribeUrl": "${BASE_URL}/prodcal.ics",
+            "years": [$START_YEAR, $YEAR, $END_YEAR],
+            "hhCalendarUrl": "https://hh.ru/calendar"
           }
           EOF
 
