--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,4 +4,14 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+      day: "sunday"
+      time: "06:00"
+      timezone: "UTC"
+    reviewers:
+      - "justSmK"
+    labels:
+      - "dependencies"
     open-pull-requests-limit: 5
+    commit-message:
+      prefix: "deps"
+      include: "scope"
